<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@+id/RelativeLayout1" android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@+id/textView1"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginTop="32.0dip" android:text="@string/elt_title" android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"/>
    <Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/elt_test_start" android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" android:layout_alignParentBottom="true"/>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@+id/textView2"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginBottom="14.0dip" android:text="@string/elt_select" android:layout_above="@id/button1"
              android:layout_alignParentLeft="true"/>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@+id/textView3"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/elt_auto_test" android:layout_toRightOf="@id/textView2"
              android:layout_alignBaseline="@id/textView2" android:layout_alignBottom="@id/textView2"/>
    <RadioGroup android:id="@+id/radioGroup1" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="46.0dip" android:layout_below="@id/textView1"
                android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
        <RadioButton android:id="@+id/radio0" android:layout_width="fill_parent" android:layout_height="80.0dip"
                     android:checked="true" android:text="@string/elt_auto_mode"/>
        <RadioButton android:id="@+id/radio1" android:layout_width="fill_parent" android:layout_height="90.0dip"
                     android:text="@string/elt_manual_mode"/>
    </RadioGroup>
</RelativeLayout>